too many extension support added, little ui changes

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Relakith PDF to Speech</title>
+    <title>Document to Speech</title>
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 
@@ -17,9 +17,21 @@
   <body>
   <div class="vertical-center">
     <div class="container">
-      <h1 class="align-middle text-center">PDF to Speech</h1>
+      <br>
+      <h1 class="align-middle text-center">Document to Speech</h1>
       <div class="col-md-12 text-center">
-        <button id="pdfUpload" type="button" class="btn btn-default">PDF Seç</button>
+        <button id="pdfUpload" type="button" class="btn btn-default">Dosya Seç</button>
+      </div>
+      <br>
+      <h2 class="align-middle text-center">Dönüştürülmüş Dosyalar</h2>
+      <div class="col-md-12 text-center">
+        <button id="openTexts" type="button" class="btn btn-default">Metinler</button>
+        <button id="openSounds" type="button" class="btn btn-default">Ses Kayıtları</button>
+      </div>
+      <br>
+      <div class="col-md-12 text-center">
+        <p><strong>Coded by Emirkan Acar(relakith)</strong></p>
+        <button id="openGithub" type="button" class="btn btn-default">Github</button>
       </div>
     </div>
   </div>
